<resources>
    <string name="app_name">HealthInTouch</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Already have an account ? Login</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="register_button">Register</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="health_in_touch">HEALTH IN TOUCH</string>
    <string name="new_user_register">New User? Register</string>
    <string name="login">Login</string>
    <string name="health_in_touch_login">Health In Touch</string>
    <string name="username">Username</string>
    <string name="password_login">Password</string>
    <string name="home">Home</string>
    <string name="labtest">Labtest</string>
    <string name="find_doctor">Find doctor</string>
    <string name="health_articles">Health Articles</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="physician">Physician</string>
    <string name="dietitian">Dietitian</string>
    <string name="surgeon">Surgeon</string>
    <string name="dentist">Dentist</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="cardBack">Back</string>
    <string name="general_physicians">GENERAL PHYSICIANS</string>
    <string name="textview">TextView</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="consultation_fees">Consultation Fees</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="textview_bookappointment">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="lab_tests_and_packages">Lab Tests and Packages</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="back">Back</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="hi_nhello">Hi\nHello</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="select_deliver_date">Select Deliver Date</string>
</resources>