<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary80"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/hitname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="46dp"
        android:text="@string/health_in_touch_login"
        android:textColor="@color/white"
        android:textColorHighlight="#D60F0F"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/regusername"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="292dp"
        android:autofillHints=""
        android:background="?attr/colorOutlineVariant"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:includeFontPadding="true"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="?attr/colorOutlineVariant"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regusername"
        app:layout_constraintTop_toBottomOf="@+id/regusername"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/existinguser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/new_user_register"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="76dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:backgroundTintMode="add"
        app:iconSize="30dp"
        app:iconTint="@color/material_dynamic_primary80"
        app:layout_constraintBottom_toTopOf="@+id/existinguser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpassword"
        app:layout_constraintVertical_bias="0.381" />

    <ImageView
        android:id="@+id/person"
        android:layout_width="124dp"
        android:layout_height="107dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toTopOf="@+id/regusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitname"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baseline_account_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>